# text-ingestion-pipeline

./: .flake8  .gitignore  404.html  README.md  dev_requirements.txt  index.html  index.md  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  search.html
api-reference/chunk/: index.html
api-reference/embedder/: index.html
api-reference/enhanced_document/: index.html
api-reference/ingest/: index.html
api-reference/load/: index.html
docs/: index.md
docs/api-reference/: chunk.md  embedder.md  enhanced_document.md  ingest.md  load.md
docs/user-guide/: installation.md  usage.md
docs_sphinx/: conf.py  index.rst
scripts/: alt_ingest.py  example_ingestion.py  playground.ipynb  playground.py
scripts/rough/: alt_ingest.py  package_structure.txt  playground.py
scripts/tutorials/: save_vectorstore_to_disk.py
search/: search_index.json
src/: alt_ingest.py  chunk.py  defaults.py  doc_chunk.py  doc_embed.py  doc_ingest.py  doc_load.py  embed.py  enhanced_document.py  ingest.py  load.py  playground.ipynb  playground.py  tmp.py  utils.py
src/easy_ingest_text/: chunk_text.py  embed_text.py  ingest_text.py  load_text.py  utils.py
tests/: test_chunker.py  test_loader.py
user-guide/installation/: index.html
user-guide/usage/: index.html
